my_project_service.yml
apiVersion: apps/v1
kind: Service
metadata:
  name: my-project-service
  labels:
    app: my-project-api
spec:
  type: ClusterIP
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 5000
  selector:
    app: my-project-api
