my_project_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-project-ingress
spec:
  defaultBackend:
    service:
      name: my-project-service
      port:
        number: 5001
